--- a/SpecUtils/D3SpectrumExportResources.h.in
+++ b/SpecUtils/D3SpectrumExportResources.h.in
@@ -41,11 +41,17 @@
 
 @SPECTRUM_CHART_D3_CSS_ARR@
 @SPECTRUM_CHART_D3_CSS_LEN@
+
+@SPECTRUM_CHART_D3_STANDALONE_CSS_ARR@
+@SPECTRUM_CHART_D3_STANDALONE_CSS_LEN@
+
 #else
+@D3_SUPPORT_FILE_RUNTIME_DIR@
 @D3_MIN_JS_FILE@
 @CASSOWARY_MIN_JS_FILE@
 @SPECTRUM_CHART_D3_JS_FILE@
 @SPECTRUM_CHART_D3_CSS_FILE@
+@SPECTRUM_CHART_D3_STANDALONE_CSS_FILE@
 #endif
 
 
