Move (most) energy calibration related code to EnergyCalibration.h/.cpp
Implemented non-linear deviation pairs to be cubic splines (although still need to switch from natural cubic splines to clamped spine with first derivative zero on either side); previous implementation of deviation pairs used linear interpolation, and was actually horribly broken.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,6 +90,7 @@ set( sources
      src/UtilityFunctions.cpp
      src/SpecUtilsAsync.cpp
      src/SerialToDetectorModel.cpp
+     src/EnergyCalibration.cpp
      README.md
 )
 
@@ -99,6 +100,7 @@ set( headers
      SpecUtils/SpecUtilsAsync.h
      SpecUtils/SpecUtils_config.h.in
      SpecUtils/SerialToDetectorModel.h
+     SpecUtils/EnergyCalibration.h
 )
 
 
