Implement using proper boundary conditions for deviation pairs. A little more "hardening" needs to be done wrt energy calibration, but nonlinear deviation pairs are now correctly implemented Unit tests against output of GADRAS-DRF are implemented, but stored outside repo with other unit tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,6 +91,7 @@ set( sources
      src/SpecUtilsAsync.cpp
      src/SerialToDetectorModel.cpp
      src/EnergyCalibration.cpp
+     src/CubicSpline.cpp
      README.md
 )
 
@@ -101,6 +102,7 @@ set( headers
      SpecUtils/SpecUtils_config.h.in
      SpecUtils/SerialToDetectorModel.h
      SpecUtils/EnergyCalibration.h
+     SpecUtils/CubicSpline.h
 )
 
 if( SpecUtils_ENABLE_D3_CHART )
