--- a/SpecUtils/SpecUtils_config.h.in
+++ b/SpecUtils/SpecUtils_config.h.in
@@ -46,7 +46,7 @@ namespace boost
 
 class Measurement;
 
-#if ( defined(WIN32) || defined(UNDER_CE) || defined(_WIN32) || defined(WIN64) )
+#if( defined(_WIN32) && defined(_MSC_VER) )
 #include <stdio.h>
 #include <stdlib.h>
 #include <math.h>
