Continued on with the refactoring. Mostly finished putting specific format spectrum file parsing/writing code into own implementation files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,6 +99,17 @@ set( sources
      src/SpecFile_spe.cpp
      src/SpecFile_csv.cpp
      src/SpecFile_gr135.cpp
+     src/SpecFile_aram.cpp
+     src/SpecFile_lis.cpp
+     src/SpecFile_lzs.cpp
+     src/SpecFile_phd.cpp
+     src/SpecFile_tka.cpp
+     src/SpecFile_lsrm.cpp
+     src/SpecFile_mca.cpp
+     src/SpecFile_spmdf.cpp
+     src/SpecFile_mps.cpp
+     src/SpecFile_multiact.cpp
+     src/SpecFile_uraider.cpp
      src/SpecUtilsAsync.cpp
      src/SerialToDetectorModel.cpp
      src/EnergyCalibration.cpp
