Improve Windows specific code, improve output N42-2012 schema validation. Got all the filesystem unit tests (including a bunch added) passing on Windows MinGW, except can_rw_in_directory.  The other unit tests tried (which is maybe only half of them) on MinGW all seem to pass. Improved N42-2012 output (at least for some specific portal data) to validate against the XML schema (also added schema to repo for future use); there may still be some variants of outputs that aren't correct (need to add a test for this). Some work on testing date-time parsing; have found some formats that don't work as intended; will fix this. Moved safe_get_line() functions into ParseUtils.h/.cpp.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -253,7 +253,7 @@ if( SpecUtils_BUILD_UNIT_TESTS )
 endif( SpecUtils_BUILD_UNIT_TESTS )
 
 if( MINGW )
-  target_link_libraries( SpecUtils PUBLIC -static-libgcc -static libshlwapi.a )
+  target_link_libraries( SpecUtils PUBLIC -static-libgcc -static libshlwapi.a libpthread.a libstdc++.a libwinpthread.a )
 endif( MINGW )
 
 target_include_directories( SpecUtils PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${Boost_INCLUDE_DIRS}
