Add skeleton code for writing CNF files. Actual writing of CNF not implemented.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -9,3 +9,12 @@ project(SpecUtilExamples)
 add_executable( convert_to_n42 convert_to_n42.cpp )
 target_link_libraries( convert_to_n42 PUBLIC SpecUtils )
 
+add_executable( convert_to_cnf convert_to_cnf.cpp )
+target_link_libraries( convert_to_cnf PUBLIC SpecUtils )
+
+
+set_target_properties( convert_to_n42 convert_to_cnf PROPERTIES
+  CXX_STANDARD 11
+  CXX_STANDARD_REQUIRED YES
+  CXX_EXTENSIONS NO
+)
