--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -9,3 +9,8 @@ project(SpecUtilExamples)
 add_executable( convert_to_n42 convert_to_n42.cpp )
 target_link_libraries( convert_to_n42 PUBLIC SpecUtils )
 
+set_target_properties( convert_to_n42 PROPERTIES
+  CXX_STANDARD 11
+  CXX_STANDARD_REQUIRED YES
+  CXX_EXTENSIONS NO
+)
