Fix some minor issues found from fuzzing or looking through the code. Added convenience executable, run_one_file_parse, to investigate issues found fuzzing.

--- a/fuzz_test/CMakeLists.txt
+++ b/fuzz_test/CMakeLists.txt
@@ -2,8 +2,13 @@ cmake_policy(SET CMP0048 NEW)
 project( SpecUtilsFuzz VERSION 1 )
 cmake_minimum_required( VERSION VERSION 3.11 FATAL_ERROR )
 
-add_executable( file_parse_fuzz file_parse_fuzz.cpp )
+add_executable( file_parse_fuzz file_parse_fuzz.cpp fuzz_interface.h fuzz_interface.cpp )
 
 target_compile_options( file_parse_fuzz PRIVATE $<$<CXX_COMPILER_ID:Clang>:-g -O1 -fsanitize=fuzzer,address,undefined> )
 target_link_libraries( file_parse_fuzz PRIVATE SpecUtils $<$<CXX_COMPILER_ID:Clang>:-fsanitize=fuzzer,address,undefined> )
 set_target_properties( file_parse_fuzz PROPERTIES CXX_STANDARD 11 CXX_STANDARD_REQUIRED YES CXX_EXTENSIONS NO )
+
+
+add_executable( run_one_file_parse run_one_file_parse.cpp fuzz_interface.h fuzz_interface.cpp )
+target_link_libraries( run_one_file_parse PRIVATE SpecUtils )
+set_target_properties( run_one_file_parse PROPERTIES CXX_STANDARD 11 CXX_STANDARD_REQUIRED YES CXX_EXTENSIONS NO )
