More minor fixes from fuzzing.

--- a/SpecUtils/SpecUtils_config.h.in
+++ b/SpecUtils/SpecUtils_config.h.in
@@ -31,6 +31,7 @@
 #cmakedefine01 SpecUtils_USING_NO_THREADING
 #cmakedefine01 SpecUtils_D3_SUPPORT_FILE_STATIC
 #cmakedefine01 SpecUtils_INJA_TEMPLATES
+#cmakedefine01 SpecUtils_BUILD_FUZZING_TESTS
 #cmakedefine SpecUtils_CNF_IMP_FILE "@SpecUtils_CNF_IMP_FILE@"
 
 #cmakedefine01 SpecUtils_PYTHON_BINDINGS
