Add FRAM Empirical efficiency form. Not well tested yet; seems to mostly work though - haven't checked the uncertaintie/correlations, which is where there is probably most likely to be an error.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,8 +46,8 @@ if( TRY_TO_STATIC_LINK )
     set(CMAKE_FIND_LIBRARY_SUFFIXES .a ${CMAKE_FIND_LIBRARY_SUFFIXES})
   endif( WIN32 )
 else( TRY_TO_STATIC_LINK )
-  set( Boost_USE_STATIC_LIBS OFF )
-  set( CMAKE_FIND_LIBRARY_SUFFIXES .so .dylib ${CMAKE_FIND_LIBRARY_SUFFIXES} )
+#  set( Boost_USE_STATIC_LIBS OFF )
+#  set( CMAKE_FIND_LIBRARY_SUFFIXES .so .dylib ${CMAKE_FIND_LIBRARY_SUFFIXES} )
 endif( TRY_TO_STATIC_LINK )
 
 
